--- a/lcars-sdk/core/lcars-sdk.css
+++ b/lcars-sdk/core/lcars-sdk.css
@@ -2134,7 +2134,7 @@ pre{white-space: pre-wrap;
 
 /* =============================================================================
    Active/Hover States. Included for optional use.
-   ==========================================================================
+   ========================================================================== 
 
 
 .button:hover, 
@@ -2147,4 +2147,5 @@ pre{white-space: pre-wrap;
 .elbow:active,
 .complexButton:active > *:not(.text){-webkit-animation:none !important;animation:none !important; background-color:#ffffff !important; border-color:#ffffff !important;}
 
-   ========================================================================== */
+*/
+
