--- a/module.css
+++ b/module.css
@@ -19,6 +19,11 @@
   top: 5px;
 }
 
+.row {
+  min-height: 10px;
+}
+
+
 #topFrame1, #topFrame2, #bottomFrame1, #bottomFrame2, #homeButton,
   #timerAdjustButton, #timerOverrideButton {
   position: absolute;
@@ -166,5 +171,63 @@
   text-align: justify;
   white-space: pre-line;
   
+}
+
+#timerSet {
+  position: absolute;
+  left: 63%;
+  top: 45%;
+  width: 34%;
+  height: 20%;
+}
+
+#timerFrameTopLeft, #timerFrameBottomLeft, #timerFrameBottomRight, #timerFrameTopRight {
+  width: 6%;
+  height: 10%;
+}
+
+#timerFrameBottomLeft {
+  position: absolute;
+  bottom: 0px;
+}
+
+#timerFrameBottomRight {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+}
+
+#timerFrameTopRight {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+}
+
+#timerSetScaleTop, #timerSetScaleBottom {
+  position: absolute;
+  left: 8%;
+  width: 84%;
+  height: 25px;
+  justify-content: space-evenly;
+}
+
+#timerSetScaleTop div {
+  min-width: 2px;
+  width: 2px;
+  min-height: 2px;
+}
+
+#timerSetScaleTop {
+  top: 0px;
+}
+
+#timerSetScaleBottom {
+  bottom: 0px;
+}
+
+#timerSetScaleBottom div {
+  min-width: 2px;
+  width: 2px;
+  min-height: 2px;
 }
 
