--- a/module.css
+++ b/module.css
@@ -317,7 +317,7 @@
 #diagnosticFrame {
   position: absolute;
   left: 65%;
-  top: 40%;
+  top: 43%;
   width: 30%;
   height: 55%;
 }
@@ -349,7 +349,7 @@
   display: flex;
   justify-content: center;
   padding-top: 10px;
-  padding-bottom: 5px;
+  padding-bottom: 10%;
 }
 
 #tzSetButton {
