--- a/lcars-sdk/core/lcars-sdk.css
+++ b/lcars-sdk/core/lcars-sdk.css
@@ -721,7 +721,7 @@ pre{white-space: pre-wrap;
 }
 
 .elbow:before{
-	font-size:20px; 
+	font-size:inherit; 
 	display:block; 
 	position:absolute; 
 	left:0px; 
